--- a/nest_frontend/package.json
+++ b/nest_frontend/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.6.7",
     "core-js": "^3.8.3",
     "pinia": "^2.1.4",
+    "v-click-outside": "^3.2.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
