--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-asgiref==3.7.2
-Django==5.0.3
-django-cors-headers==4.3.1
-django-phonenumber-field==7.3.0
-djangorestframework==3.14.0
+asgiref==3.8.1
+Django==5.1
+django-cors-headers==4.4.0
+django-phonenumber-field==8.0.0
+djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
-phonenumbers==8.13.32
-pillow==10.2.0
-PyJWT==2.8.0
+phonenumbers==8.13.44
+pillow==10.4.0
+PyJWT==2.9.0
 pytz==2024.1
-sqlparse==0.4.4
+sqlparse==0.5.1
+whitenoise==6.7.0
